--- a/mainStyle.css
+++ b/mainStyle.css
@@ -114,7 +114,7 @@ body {
 
 #navBar {
     height: 4em;
-    /*border-bottom: 2px solid #FFFFFF;*/
+    border-bottom: 2px solid #FFFFFF;
 }
 
 #navBar div {
@@ -147,7 +147,7 @@ body {
 @media screen and (max-width:1366px) {
 
     #mainCont {
-        /*border: 2px solid #FFFFFF;*/
+        border: 2px solid #FFFFFF;
         width: 83.5em;
         height: 39em;
     }
@@ -196,7 +196,7 @@ body {
 }    
 
 #otherSiteLinks {
-    /*border: 2px solid #FF0000;*/
+    border: 2px solid #FF0000;
     height: 2.5em;
     margin-right: 2em;
     float: right;
